# AlgebraicSystem

./: CMakeLists.txt  README.md  main.cpp
include/: AlgebraicSystem.hpp
test/: main.cpp
